Fix bug with font

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/inspector-general');
+@import url('https://fonts.cdnfonts.com/css/inspector-general');
 
 body{
     background-color: AntiqueWhite;
